--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "pg": "^8.16.3",
     "prisma": "^7.2.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "nodemon": "^3.1.11"
   }
 }
